// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IconLink > should match snapshot with end icon 1`] = `
<body>
  <div>
    <a
      class="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover css-1ksp1na-MuiTypography-root-MuiLink-root"
    >
      <span
        class="css-ae0xht-MuiStack-root"
      >
         
        <span>
          Test
        </span>
         
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="QuestionMarkIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.07 12.85c.77-1.39 2.25-2.21 3.11-3.44.91-1.29.4-3.7-2.18-3.7-1.69 0-2.52 1.28-2.87 2.34L6.54 6.96C7.25 4.83 9.18 3 11.99 3c2.35 0 3.96 1.07 4.78 2.41.7 1.15 1.11 3.3.03 4.9-1.2 1.77-2.35 2.31-2.97 3.45-.25.46-.35.76-.35 2.24h-2.89c-.01-.78-.13-2.05.48-3.15zM14 20c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`IconLink > should match snapshot with start and end icon 1`] = `
<body>
  <div>
    <a
      class="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover css-1ksp1na-MuiTypography-root-MuiLink-root"
    >
      <span
        class="css-ae0xht-MuiStack-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="QuestionMarkIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.07 12.85c.77-1.39 2.25-2.21 3.11-3.44.91-1.29.4-3.7-2.18-3.7-1.69 0-2.52 1.28-2.87 2.34L6.54 6.96C7.25 4.83 9.18 3 11.99 3c2.35 0 3.96 1.07 4.78 2.41.7 1.15 1.11 3.3.03 4.9-1.2 1.77-2.35 2.31-2.97 3.45-.25.46-.35.76-.35 2.24h-2.89c-.01-.78-.13-2.05.48-3.15zM14 20c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2z"
          />
        </svg>
         
        <span>
          Test
        </span>
         
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="QuestionMarkIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.07 12.85c.77-1.39 2.25-2.21 3.11-3.44.91-1.29.4-3.7-2.18-3.7-1.69 0-2.52 1.28-2.87 2.34L6.54 6.96C7.25 4.83 9.18 3 11.99 3c2.35 0 3.96 1.07 4.78 2.41.7 1.15 1.11 3.3.03 4.9-1.2 1.77-2.35 2.31-2.97 3.45-.25.46-.35.76-.35 2.24h-2.89c-.01-.78-.13-2.05.48-3.15zM14 20c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2z"
          />
        </svg>
      </span>
    </a>
  </div>
</body>
`;

exports[`IconLink > should match snapshot with start icon 1`] = `
<body>
  <div>
    <a
      class="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover css-1ksp1na-MuiTypography-root-MuiLink-root"
    >
      <span
        class="css-ae0xht-MuiStack-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
          data-testid="QuestionMarkIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11.07 12.85c.77-1.39 2.25-2.21 3.11-3.44.91-1.29.4-3.7-2.18-3.7-1.69 0-2.52 1.28-2.87 2.34L6.54 6.96C7.25 4.83 9.18 3 11.99 3c2.35 0 3.96 1.07 4.78 2.41.7 1.15 1.11 3.3.03 4.9-1.2 1.77-2.35 2.31-2.97 3.45-.25.46-.35.76-.35 2.24h-2.89c-.01-.78-.13-2.05.48-3.15zM14 20c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2z"
          />
        </svg>
         
        <span>
          Test
        </span>
         
      </span>
    </a>
  </div>
</body>
`;

exports[`IconLink > should match snapshot without icons 1`] = `
<body>
  <div>
    <a
      class="MuiTypography-root MuiTypography-body2 MuiLink-root MuiLink-underlineHover css-1ksp1na-MuiTypography-root-MuiLink-root"
    >
      <span
        class="css-ae0xht-MuiStack-root"
      >
         
        <span>
          Test
        </span>
         
      </span>
    </a>
  </div>
</body>
`;
